# ejabberd-muc-extensions

./: .gitignore  Makefile  Makefile.in  README.txt  Rakefile  configure  configure.ac
debian/: README  changelog  control  copyright
src/: mod_muc_ext.erl  mod_muc_log_ext.erl  mod_muc_room_ext.erl
