#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(ejabberd-muc-extra, 0.1.1, engineering@stageit.com)
AC_PREREQ([2.65])

# Checks for programs.
AC_ERLANG_NEED_ERLC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
